--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nagarjun - Portfolio</title>
-    <!-- Font Awesome for icons -->
+    <title>Nagarjun Gururaj - Data Scientist</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- AOS Animation Library -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
         :root {
@@ -36,130 +34,361 @@
             margin: 0 auto;
             padding: 0 20px;
         }
-        [Previous HTML structure remains the same until the header section]
 
-<header>
-    <div class="container header-content" data-aos="fade-up">
-        <h1>Nagarjun Gururaj</h1>
-        <p>Lead Data Scientist at Siemens | AI/ML Expert</p>
-        <p class="header-subtitle">Deep Learning • Computer Vision • Natural Language Processing • Generative AI</p>
-    </div>
-</header>
+        /* Header Styles */
+        header {
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            color: white;
+            padding: 100px 0;
+            text-align: center;
+            clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        }
 
-<section id="about">
-    <div class="container" data-aos="fade-up">
-        <h2 class="section-title">About Me</h2>
-        <p style="text-align: center; max-width: 800px; margin: 0 auto;">
-            I'm a Lead Data Scientist at Siemens, specializing in computer vision, deep learning, and GenAI. 
-            With a strong focus on bridging research with practical industrial solutions, I drive scalable AI 
-            implementations for industrial automation and smart manufacturing. My expertise spans across 
-            developing innovative solutions for image analytics, anomaly detection, and generative AI applications.
-        </p>
-    </div>
-</section>
+        .header-content h1 {
+            font-size: 3.5rem;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+        }
 
-<section id="skills">
-    <div class="container">
-        <h2 class="section-title">Expertise</h2>
-        <div class="skills-grid">
-            <div class="skill-card" data-aos="flip-left">
-                <i class="fas fa-brain"></i>
-                <h3>AI/ML</h3>
-                <p>Deep Learning</p>
-                <p>Computer Vision</p>
-                <p>Generative AI</p>
-                <p>crewai</p>
-                <p>Google Gemini</p>
-            </div>
-            <div class="skill-card" data-aos="flip-left" data-aos-delay="100">
-                <i class="fas fa-code"></i>
-                <h3>Technologies</h3>
-                <p>Python</p>
-                <p>TensorRT</p>
-                <p>OpenVINO</p>
-                <p>Azure ML</p>
-                <p>PySpark</p>
-            </div>
-            <div class="skill-card" data-aos="flip-left" data-aos-delay="200">
-                <i class="fas fa-language"></i>
-                <h3>Languages</h3>
-                <p>English (Professional)</p>
-                <p>Hindi (Professional)</p>
-                <p>Kannada (Native)</p>
+        .header-subtitle {
+            font-size: 1.1rem;
+            opacity: 0.9;
+            margin-top: 10px;
+        }
+
+        /* Navigation */
+        nav {
+            background: white;
+            padding: 20px 0;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        nav ul {
+            list-style: none;
+            text-align: center;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 20px;
+        }
+
+        nav ul li a {
+            color: var(--text-color);
+            text-decoration: none;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            color: var(--primary-color);
+        }
+
+        /* Sections */
+        section {
+            padding: 80px 0;
+        }
+
+        .section-title {
+            text-align: center;
+            margin-bottom: 60px;
+            position: relative;
+        }
+
+        .section-title::after {
+            content: '';
+            display: block;
+            width: 50px;
+            height: 3px;
+            background: var(--primary-color);
+            margin: 20px auto;
+        }
+
+        /* Skills Section */
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
+            margin-top: 20px;
+        }
+
+        .skill-card {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            text-align: center;
+            transition: transform 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        .skill-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .skill-card i {
+            font-size: 2.5rem;
+            color: var(--primary-color);
+            margin-bottom: 20px;
+        }
+
+        /* Experience Section */
+        .experience-grid {
+            display: grid;
+            gap: 30px;
+            margin-top: 20px;
+        }
+
+        .experience-card {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        .experience-card h3 {
+            color: var(--primary-color);
+            margin-bottom: 10px;
+        }
+
+        .experience-card h4 {
+            color: var(--secondary-color);
+            margin-bottom: 5px;
+        }
+
+        .experience-card .date {
+            color: var(--light-text);
+            margin-bottom: 15px;
+        }
+
+        .experience-card ul {
+            padding-left: 20px;
+        }
+
+        .experience-card li {
+            margin-bottom: 10px;
+        }
+
+        /* Publications and Certifications */
+        .publications-grid,
+        .certifications-grid {
+            display: grid;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .publication-card,
+        .certification-card {
+            background: white;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        /* Contact Section */
+        .contact-info {
+            text-align: center;
+            background: white;
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        .contact-info p {
+            margin-bottom: 15px;
+        }
+
+        .social-links {
+            margin-top: 30px;
+        }
+
+        .social-links a {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            line-height: 40px;
+            text-align: center;
+            background: var(--primary-color);
+            color: white;
+            border-radius: 50%;
+            margin: 0 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .social-links a:hover {
+            transform: translateY(-5px);
+        }
+
+        /* Footer */
+        footer {
+            background: var(--primary-color);
+            color: white;
+            text-align: center;
+            padding: 30px 0;
+            margin-top: 40px;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .header-content h1 {
+                font-size: 2.5rem;
+            }
+
+            nav ul li {
+                margin: 0 10px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="container header-content" data-aos="fade-up">
+            <h1>Nagarjun Gururaj</h1>
+            <p>Lead Data Scientist at Siemens | AI/ML Expert</p>
+            <p class="header-subtitle">Deep Learning • Computer Vision • Natural Language Processing • Generative AI</p>
+        </div>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
+            <li><a href="#experience"><i class="fas fa-briefcase"></i> Experience</a></li>
+            <li><a href="#skills"><i class="fas fa-code"></i> Skills</a></li>
+            <li><a href="#publications"><i class="fas fa-book"></i> Publications</a></li>
+            <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+        </ul>
+    </nav>
+
+    <section id="about">
+        <div class="container" data-aos="fade-up">
+            <h2 class="section-title">About Me</h2>
+            <p style="text-align: center; max-width: 800px; margin: 0 auto;">
+                I'm a Lead Data Scientist at Siemens, specializing in computer vision, deep learning, and GenAI. 
+                With a strong focus on bridging research with practical industrial solutions, I drive scalable AI 
+                implementations for industrial automation and smart manufacturing. My expertise spans across 
+                developing innovative solutions for image analytics, anomaly detection, and generative AI applications.
+            </p>
+        </div>
+    </section>
+
+    <section id="experience">
+        <div class="container">
+            <h2 class="section-title">Professional Experience</h2>
+            <div class="experience-grid">
+                <div class="experience-card" data-aos="fade-up">
+                    <h3>Siemens</h3>
+                    <h4>Lead Data Scientist</h4>
+                    <p class="date">May 2025 - Present</p>
+                    <ul>
+                        <li>Developed Image Analytics MVP with 95% accuracy for liquid fill level detection</li>
+                        <li>Led anomaly detection projects for substation sensor data</li>
+                        <li>Created PropGenAI - GenAI based multi-Agents Project Proposal Generator</li>
+                    </ul>
+                </div>
+                <div class="experience-card" data-aos="fade-up">
+                    <h3>Mindtree</h3>
+                    <h4>Module Lead</h4>
+                    <p class="date">August 2021 - September 2022</p>
+                    <ul>
+                        <li>Led computer vision project for on-shelf product identification</li>
+                        <li>Developed anomaly detection systems using Azure ML</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section id="experience">
-    <div class="container">
-        <h2 class="section-title">Professional Experience</h2>
-        <div class="experience-grid">
-            <div class="experience-card" data-aos="fade-up">
-                <h3>Siemens</h3>
-                <h4>Lead Data Scientist</h4>
-                <p class="date">May 2025 - Present</p>
-                <ul>
-                    <li>Developed Image Analytics MVP with 95% accuracy for liquid fill level detection</li>
-                    <li>Led anomaly detection projects for substation sensor data</li>
-                    <li>Created PropGenAI - GenAI based multi-Agents Project Proposal Generator</li>
-                </ul>
-            </div>
-            <div class="experience-card" data-aos="fade-up">
-                <h3>Mindtree</h3>
-                <h4>Module Lead</h4>
-                <p class="date">August 2021 - September 2022</p>
-                <ul>
-                    <li>Led computer vision project for on-shelf product identification</li>
-                    <li>Developed anomaly detection systems using Azure ML</li>
-                </ul>
+    <section id="skills">
+        <div class="container">
+            <h2 class="section-title">Expertise</h2>
+            <div class="skills-grid">
+                <div class="skill-card" data-aos="flip-left">
+                    <i class="fas fa-brain"></i>
+                    <h3>AI/ML</h3>
+                    <p>Deep Learning</p>
+                    <p>Computer Vision</p>
+                    <p>Generative AI</p>
+                    <p>crewai</p>
+                    <p>Google Gemini</p>
+                </div>
+                <div class="skill-card" data-aos="flip-left">
+                    <i class="fas fa-code"></i>
+                    <h3>Technologies</h3>
+                    <p>Python</p>
+                    <p>TensorRT</p>
+                    <p>OpenVINO</p>
+                    <p>Azure ML</p>
+                    <p>PySpark</p>
+                </div>
+                <div class="skill-card" data-aos="flip-left">
+                    <i class="fas fa-language"></i>
+                    <h3>Languages</h3>
+                    <p>English (Professional)</p>
+                    <p>Hindi (Professional)</p>
+                    <p>Kannada (Native)</p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section id="publications">
-    <div class="container">
-        <h2 class="section-title">Publications</h2>
-        <div class="publications-grid">
-            <div class="publication-card" data-aos="fade-up">
-                <h3>Approximate Deep Neural Networks for Embedded Platforms</h3>
-            </div>
-            <div class="publication-card" data-aos="fade-up">
-                <h3>InnovFaceNet: Deep Face Recognition for Industrial Environments</h3>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="certifications">
-    <div class="container">
-        <h2 class="section-title">Certifications</h2>
-        <div class="certifications-grid">
-            <div class="certification-card" data-aos="fade-up">
-                <ul>
-                    <li>Microsoft Certified Azure Fundamentals</li>
-                    <li>Introduction to Large Language Models</li>
-                    <li>Introduction to Generative AI</li>
-                    <li>Hands-On Pyspark for Big Data Analysis</li>
-                </ul>
+    <section id="publications">
+        <div class="container">
+            <h2 class="section-title">Publications</h2>
+            <div class="publications-grid">
+                <div class="publication-card" data-aos="fade-up">
+                    <h3>Approximate Deep Neural Networks for Embedded Platforms</h3>
+                </div>
+                <div class="publication-card" data-aos="fade-up">
+                    <h3>InnovFaceNet: Deep Face Recognition for Industrial Environments</h3>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section id="contact">
-    <div class="container">
-        <h2 class="section-title">Get In Touch</h2>
-        <div class="contact-info" data-aos="fade-up">
-            <p><i class="fas fa-envelope"></i> nagarjun.gururaj@gmail.com</p>
-            <p><i class="fas fa-map-marker-alt"></i> Bengaluru, Karnataka, India</p>
-            <div class="social-links">
-                <a href="https://www.linkedin.com/in/nagarjungururaj" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://flowcv.me/nagarjungururaj" target="_blank"><i class="fas fa-globe"></i></a>
+    <section id="certifications">
+        <div class="container">
+            <h2 class="section-title">Certifications</h2>
+            <div class="certifications-grid">
+                <div class="certification-card" data-aos="fade-up">
+                    <ul>
+                        <li>Microsoft Certified Azure Fundamentals</li>
+                        <li>Introduction to Large Language Models</li>
+                        <li>Introduction to Generative AI</li>
+                        <li>Hands-On Pyspark for Big Data Analysis</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-[Rest of the HTML structure remains the same]
+    <section id="contact">
+        <div class="container">
+            <h2 class="section-title">Get In Touch</h2>
+            <div class="contact-info" data-aos="fade-up">
+                <p><i class="fas fa-envelope"></i> nagarjun.gururaj@gmail.com</p>
+                <p><i class="fas fa-map-marker-alt"></i> Bengaluru, Karnataka, India</p>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/nagarjungururaj" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://flowcv.me/nagarjungururaj" target="_blank"><i class="fas fa-globe"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 Nagarjun Gururaj. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 1000,
+            once: true
+        });
+    </script>
+</body>
+</html>
